--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,1 +1,13 @@
 <h1>Signup Form</h1>
+<a href="/">Homepage</a>
+<form action="/sign-up" method="POST">
+	<label for="firstName">First Name</label>
+	<input id="firstName" name="firstName" type="text" />
+	<label for="lastName">Last Name</label>
+	<input id="lastName" name="lastName" type="text" />
+	<label for="username">Username</label>
+	<input id="username" name="username" placeholder="username" type="text" />
+	<label for="password">Password</label>
+	<input id="password" name="password" type="password" />
+    <button type="submit">Sign Up</button>
+</form>
