--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,10 @@
 <h1>Homepage</h1>
+<h2>Login</h2>
+<form action="/log-in" method="POST">
+    <label for="username">Username</label>
+    <input id="username" name="username" placeholder="username" type="text">
+    <label for="password">Password</label>
+    <input id="password" name="password" type="password">
+    <button type="submit">Log In</button>
+</form>
 <a href="/sign-up">Sign Up</a>
