--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,14 @@
-<h1>Homepage</h1>
-<h2>Login</h2>
+<% if (locals.user) {%>
+<h1>Welcome Back, <%= user.username%>!</h1>
+<a href="/log-out">Log Out</a>
+<% } else { %>
+<h1>Please log in to continue</h1>
 <form action="/log-in" method="POST">
-    <label for="username">Username</label>
-    <input id="username" name="username" placeholder="username" type="text">
-    <label for="password">Password</label>
-    <input id="password" name="password" type="password">
-    <button type="submit">Log In</button>
+	<label for="username">Username</label>
+	<input id="username" name="username" placeholder="username" type="text" />
+	<label for="password">Password</label>
+	<input id="password" name="password" type="password" />
+	<button type="submit">Log In</button>
 </form>
 <a href="/sign-up">Sign Up</a>
+<%} %>
