--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,13 +1,24 @@
+<%- include('partials/errors') %>
 <h1>Signup Form</h1>
 <a href="/">Homepage</a>
 <form action="/sign-up" method="POST">
 	<label for="firstName">First Name</label>
-	<input id="firstName" name="firstName" type="text" />
+	<input id="firstName" name="firstName" type="text" maxlength="18" required />
 	<label for="lastName">Last Name</label>
-	<input id="lastName" name="lastName" type="text" />
+	<input id="lastName" name="lastName" type="text" maxlength="18" />
 	<label for="username">Username</label>
-	<input id="username" name="username" placeholder="username" type="text" />
+	<input
+		id="username"
+		name="username"
+		placeholder="username"
+		type="text"
+		minlength="3"
+		maxlength="18"
+		required
+	/>
 	<label for="password">Password</label>
-	<input id="password" name="password" type="password" />
-    <button type="submit">Sign Up</button>
+	<input id="password" name="password" type="password" minlength="8" required />
+	<label for="confirm_password">Confirm Password</label>
+	<input id="confirm_password" name="confirm_password" type="password" required />
+	<button type="submit">Sign Up</button>
 </form>
