--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,5 +38,5 @@
 	<input id="password" name="password" type="password" required />
 	<button type="submit">Log In</button>
 </form>
-<a href="/sign-up">Sign Up</a>
+<h2>Or <a href="/sign-up">Sign Up</a> here</h2>
 <%} %>
