--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -20,5 +20,9 @@
 	<input id="password" name="password" type="password" minlength="8" required />
 	<label for="confirm_password">Confirm Password</label>
 	<input id="confirm_password" name="confirm_password" type="password" required />
+	<label>
+		<input type="checkbox" name="is_admin" />
+		Sign up as admin
+	</label>
 	<button type="submit">Sign Up</button>
 </form>
