Minor bug fixes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,12 +44,12 @@
 				<strong><%= msg.title %></strong><br />
 				<%= msg.text %><br />
 
-				<% if (user.is_member || user.is_admin) { %>
+				<% if (user?.is_member || user?.is_admin) { %>
 					<em>by <%= msg.first_name %> <%= msg.last_name %></em><br />
 					<em><%= new Date(msg.timestamp).toLocaleString() %></em><br />
 				<% } %>
 
-				<% if (user.is_admin) { %>
+				<% if (user?.is_admin) { %>
 					<form action="/message/<%= msg.id %>/delete" method="POST" style="display:inline;">
 						<button type="submit">Delete</button>
 					</form>
