--- a/views/becomeMember.ejs
+++ b/views/becomeMember.ejs
@@ -1,7 +1,7 @@
 <h2>Become a Full Member</h2>
-<% if (typeof error !== 'undefined' && error) { %>
-<p style="color: red"><%= error %></p>
-<% } %>
+
+<%- include('partials/messages') %>
+
 <form action="/become-member" method="POST">
 	<input
 		type="text"
